@@ -3,7 +3,7 @@
 0.1 Copyright
 =============
 
-This package is Copyright 2001-2009 by Wilson Snyder
+This package is Copyright 2001-2010 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
