@@ -16,7 +16,7 @@ use Module::LocalBuild;
 use strict;
 use vars qw ($Project $Debug $VERSION);
 
-$VERSION = '1.011';
+$VERSION = '1.012';
 
 ######################################################################
 
@@ -252,7 +252,7 @@ Displays program version and exits.
 
 =head1 DISTRIBUTION
 
-Copyright 2000-2009 by Wilson Snyder.  This program is free software; you
+Copyright 2000-2010 by Wilson Snyder.  This program is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License
 Version 2.0.
