@@ -23,7 +23,7 @@ This is the Module::LocalBuild Perl Package.
 @node Copyright, Summary, Top, Top
 @section Copyright
 
-This package is Copyright 2001-2009 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 2001-2010 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of either the GNU Lesser General Public License
