@@ -1,7 +1,7 @@
 # DESCRIPTION: Example file that boots localbuild for testing
 ######################################################################
 #
-# Copyright 2007-2009 by Wilson Snyder <wsnyder@wsnyder.org>.  This program
+# Copyright 2007-2010 by Wilson Snyder <wsnyder@wsnyder.org>.  This program
 # is free software; you can redistribute it and/or modify it under the
 # terms of either the GNU Lesser General Public License Version 3 or the
 # Perl Artistic License Version 2.0.
